--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <% if (htmlWebpackPlugin.options.env.GA_PROPERTY_ID){ %>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=<%= htmlWebpackPlugin.options.env.GA_PROPERTY_ID %>"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', '<%= htmlWebpackPlugin.options.env.GA_PROPERTY_ID %>', { 'anonymize_ip': true });
-        </script>
-    <% } %>
-
-    <meta name="Description" content="Musish - The open source Apple Music web player. Listen now.">
+    <meta name="Description" content="Volumio Apple Music Plugin.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <title><%= htmlWebpackPlugin.options.title %></title>
